--- a/dragonpoop_alpha_codeblocks/dragonpoop_alpha.cbp
+++ b/dragonpoop_alpha_codeblocks/dragonpoop_alpha.cbp
@@ -301,6 +301,20 @@
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/button_gui/button_gui.cpp" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/button_gui/button_gui.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/button_gui/button_guis.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui_readlock.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui_readlock.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui_writelock.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_gui_writelock.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_label_gui.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_label_gui.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui_readlock.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui_readlock.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui_writelock.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/edit_gui/edit_text_gui_writelock.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/gui.cpp" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/gui.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/gui_factory.cpp" />
@@ -337,6 +351,8 @@
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/menu_gui/menu_guis.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/model_man_gui/model_man_gui.cpp" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/model_man_gui/model_man_gui.h" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/model_man_gui/model_man_model_gui/model_man_model_gui.cpp" />
+		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/model_man_gui/model_man_model_gui/model_man_model_gui.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/perf_stats_gui/perf_stats_gui.cpp" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/perf_stats_gui/perf_stats_gui.h" />
 		<Unit filename="../dragonpoop_alpha/dragonpoop/gfx/gui/perf_stats_gui/perf_stats_gui_factory.cpp" />
